--- a/labs/lab2.qmd
+++ b/labs/lab2.qmd
@@ -289,7 +289,7 @@ We are often interested in bivariate relationships or how two variables relate t
 
 Let's use your subset of **Massachusetts data** to perform this part of analysis. (We could use the nationwide dataset, but there will be over 40,000 points showing on the graph, which will not be pleasing to the eye).
 
-```{r label="massachusetts", echo=FALSE}
+```{r label="massachusetts"}
 ozs_ma <- ozs |> filter(state == "Massachusetts") 
 ```
 
@@ -352,9 +352,9 @@ In the YAML header of your Quarto document, please add `embed-resources: true` t
 
 The first exercise will ask you to create summary tables to analyze opportunity zones in Massachusetts. Please include the code you used, the tables you produced, and any explanatory text that you think would help clarify your results:
 
-1.  In Massachusetts, how many eligible census tracts are designated as Opportunity Zones, and how many are not designated? What are the average poverty rates of the two groups?
+1.  In Massachusetts, what are the average poverty rates for Opportunity Zones and non-Opportunity Zones?
 
-2.  When you have the result of Q1 (the summary for all of Massachusetts), what are the corresponding situations by county in Massachusetts?
+2.  When you have the result of Q1 (the summary for Massachusetts), what are the corresponding situations by county in Massachusetts?
 
 3.  Reorganize your previous table, which county has the greatest disparity in poverty rate between designated and non-designated tracts?
 
@@ -368,18 +368,17 @@ Focus on your data in Massachusetts, now choose from the following variables: `m
 
 ## Exercise 3
 
-The following code creates a **bar chart**. You will see our familiar `group_by` + `summarise` process used to calculate the average median house income by county in Massachusetts. This summarized table is then piped to `ggplot()` for visualization, and the `geom` function used here is `geom_col`.
+First, let's use our familiar `group_by` + `summarise` process to calculate the average median house income by county in Massachusetts.
 
 ```{r}
 #| label: "barplot"
 ozs_ma |> 
   group_by(county, DesignatedOZ) |>  
   summarise(
-    Tracts = n(),
-    Income = mean(medhhincome, na.rm=TRUE)) |> 
-  ggplot(aes(x = county, y = Income, fill = DesignatedOZ)) +
-  geom_col() 
+    Income = mean(medhhincome, na.rm=TRUE)) 
 ```
+
+Please pipe your summarized table to `ggplot()` for visualization. The `geom` function you should use here is `geom_col`.
 
 ------------------------------------------------------------------------
 
@@ -389,7 +388,7 @@ ozs_ma |>
 
 ![](../img/lab2-emp.png)
 
-There are a few differences, which have enhanced the overall quality. How can you modify your code above to replicate the bar chart in this image? In a new code chunk, please copy and paste your last bar chart code, and try your best to address the following questions.
+There should be a few differences, which have enhanced the overall quality. How can you modify your code to replicate the bar chart in this image? In a new code chunk, please copy and paste your last bar chart code, and try your best to address the following questions.
 
 1.  The bars are put side-by-side instead of stacking on top of one another. [More explanations here](https://r4ds.had.co.nz/data-visualisation.html#position-adjustments). If you don't want a stacked bar chart, you can use one of the three other options: "identity", "dodge", or "fill".
 2.  The x-axis labels are titled to 45 degrees. How can I achieve this? [Hint](https://ggplot2.tidyverse.org/reference/theme.html).
