--- a/labs/lab2.qmd
+++ b/labs/lab2.qmd
@@ -74,7 +74,7 @@ Here are the column definitions:
 
 ------------------------------------------------------------------------
 
-View the dataset in your data viewer. While browsing its variables, there might be here are something we are interested to know:
+View the dataset in your data viewer. While browsing its variables, there might be something we are interested to know:
 
 -   How many Opportunity Zones are there, and what is the situation at the federal, state, and county levels?
 -   Are there any distinguishable differences in economic conditions between designated and not designated census tracts? Differences in terms of poverty rate, vacancy rate, median household income, demographics, etc.
@@ -401,7 +401,7 @@ Feel free to consult the [R Graph Gallery](#0) and [Aesthetic specifications](h
 
 # Work Products
 
-Please submit **a** **Rendered HTML file** that shows your work and responses for each of the three Exercises included in this lab. Make sure you have included `embed-resources: true` in your YAML header, this is to help preserve all your pictures in your HTML.
+After you render your Quarto document, you will find an ".html" file in your project folder. Please submit **the** **Rendered HTML file** that shows your work and responses for each of the three Exercises included in this lab. Make sure you have included `embed-resources: true` in your YAML header, this is to help preserve all your pictures in your HTML.
 
 Please **upload your report to Canvas** **by the end of day, Tuesday, Nov 5.**
 
